@@ -26,7 +26,7 @@
 			{{render_error(form.title)}}
 		</div>
 		<div class="form-group">
-			{{form.job_type(class="form-control", placeholder=_("title"))}}
+			{{form.job_type(class="form-control")}}
 			{{render_error(form.job_type)}}
 		</div>
 		<div class="form-group">
