@@ -1,5 +1,9 @@
+2014-07-08
+1.增加了语言切换功能，主要是切换en/zh，momentjs和bybabel的分开存放在session中。
+2.更新了翻译。
+
 2014-07-07
-1.更新了alembic，不然不可能删除mysql的unique的约束
+1.更新了alembic，不然不可能删除mysql的unique的约束。
 2.在core的new方法里判断id并去掉。id为0的情况会使得返回的model不可访问。创建新的实体不应用有id.
 3.增加工作模块。
 
